@@ -264,12 +264,15 @@ serd_uri_string_length(const SerdURIView* const uri)
 }
 
 static size_t
-string_sink(const void* const buf, const size_t len, void* const stream)
+string_sink(const void* const buf,
+            const size_t      size,
+            const size_t      nmemb,
+            void* const       stream)
 {
   char** ptr = (char**)stream;
-  memcpy(*ptr, buf, len);
-  *ptr += len;
-  return len;
+  memcpy(*ptr, buf, size * nmemb);
+  *ptr += size * nmemb;
+  return nmemb;
 }
 
 SerdNode*
@@ -387,16 +390,16 @@ serd_new_file_uri(const SerdStringView path, const SerdStringView hostname)
   SerdBuffer buffer = {uri, uri_len};
   for (size_t i = 0; i < path.len; ++i) {
     if (is_windows && path.buf[i] == '\\') {
-      serd_buffer_sink("/", 1, &buffer);
+      serd_buffer_sink("/", 1, 1, &buffer);
     } else if (path.buf[i] == '%') {
-      serd_buffer_sink("%%", 2, &buffer);
+      serd_buffer_sink("%%", 1, 2, &buffer);
     } else if (is_uri_path_char(path.buf[i])) {
-      serd_buffer_sink(path.buf + i, 1, &buffer);
+      serd_buffer_sink(path.buf + i, 1, 1, &buffer);
     } else {
       char escape_str[10] = {'%', 0, 0, 0, 0, 0, 0, 0, 0, 0};
       snprintf(
         escape_str + 1, sizeof(escape_str) - 1, "%X", (unsigned)path.buf[i]);
-      serd_buffer_sink(escape_str, 3, &buffer);
+      serd_buffer_sink(escape_str, 1, 3, &buffer);
     }
   }
   serd_buffer_sink_finish(&buffer);
