@@ -438,9 +438,11 @@ write_text(SerdWriter* writer,
 }
 
 static size_t
-uri_sink(const void* buf, size_t len, void* stream)
+uri_sink(const void* buf, size_t size, size_t nmemb, void* stream)
 {
-  return write_uri((SerdWriter*)stream, (const char*)buf, len);
+  (void)size;
+  assert(size == 1);
+  return write_uri((SerdWriter*)stream, (const char*)buf, nmemb);
 }
 
 static void
@@ -963,7 +965,7 @@ SerdWriter*
 serd_writer_new(SerdSyntax      syntax,
                 SerdWriterFlags flags,
                 SerdEnv*        env,
-                SerdSink        ssink,
+                SerdWriteFunc   ssink,
                 void*           stream)
 {
   const WriteContext context = WRITE_CONTEXT_NULL;
@@ -1096,25 +1098,24 @@ serd_writer_env(SerdWriter* writer)
 }
 
 size_t
-serd_file_sink(const void* buf, size_t len, void* stream)
+serd_buffer_sink(const void* const buf,
+                 const size_t      size,
+                 const size_t      nmemb,
+                 void* const       stream)
 {
-  return fwrite(buf, 1, len, (FILE*)stream);
-}
+  assert(size == 1);
+  (void)size;
 
-size_t
-serd_buffer_sink(const void* const buf, const size_t len, void* const stream)
-{
   SerdBuffer* buffer = (SerdBuffer*)stream;
-
-  buffer->buf = (char*)realloc(buffer->buf, buffer->len + len);
-  memcpy((uint8_t*)buffer->buf + buffer->len, buf, len);
-  buffer->len += len;
-  return len;
+  buffer->buf        = (char*)realloc(buffer->buf, buffer->len + nmemb);
+  memcpy((uint8_t*)buffer->buf + buffer->len, buf, nmemb);
+  buffer->len += nmemb;
+  return nmemb;
 }
 
 char*
 serd_buffer_sink_finish(SerdBuffer* const stream)
 {
-  serd_buffer_sink("", 1, stream);
+  serd_buffer_sink("", 1, 1, stream);
   return (char*)stream->buf;
 }
