@@ -90,7 +90,7 @@ test_read_chunks(void)
   assert(f);
 
   SerdStatus st = serd_reader_start_stream(
-    reader, (SerdSource)fread, (SerdStreamErrorFunc)ferror, f, NULL, 1);
+    reader, (SerdReadFunc)fread, (SerdStreamErrorFunc)ferror, f, NULL, 1);
   assert(st == SERD_SUCCESS);
 
   // Write two statement separated by null characters
@@ -164,7 +164,8 @@ test_writer(const char* const path)
   SerdEnv* env = serd_env_new(SERD_EMPTY_STRING());
   assert(fd);
 
-  SerdWriter* writer = serd_writer_new(SERD_TURTLE, 0, env, serd_file_sink, fd);
+  SerdWriter* writer =
+    serd_writer_new(SERD_TURTLE, 0, env, (SerdWriteFunc)fwrite, fd);
   assert(writer);
 
   serd_writer_chop_blank_prefix(writer, "tmp");
@@ -293,8 +294,12 @@ test_reader(const char* path)
     fflush(temp);
     fseek(temp, 0L, SEEK_SET);
 
-    serd_reader_start_stream(
-      reader, (SerdSource)fread, (SerdStreamErrorFunc)ferror, temp, NULL, 4096);
+    serd_reader_start_stream(reader,
+                             (SerdReadFunc)fread,
+                             (SerdStreamErrorFunc)ferror,
+                             temp,
+                             NULL,
+                             4096);
 
     assert(serd_reader_read_chunk(reader) == SERD_SUCCESS);
     assert(serd_reader_read_chunk(reader) == SERD_FAILURE);
@@ -308,7 +313,7 @@ test_reader(const char* path)
   {
     size_t n_reads = 0;
     serd_reader_start_stream(reader,
-                             (SerdSource)eof_test_read,
+                             (SerdReadFunc)eof_test_read,
                              (SerdStreamErrorFunc)eof_test_error,
                              &n_reads,
                              NULL,
